--- a/package.json
+++ b/package.json
@@ -1,93 +1,97 @@
 {
-  "name": "SwiftForAll",
-  "version": "0.3.1",
-  "description": "Generates Swift styleguide on all project types.",
-  "author": {
-    "name": "Amaury DAVID"
-  },
-  "repository": "https://github.com/amaurydavid/SwiftForAll",
-  "scripts": {
-    "start": "zem start",
-    "build": "zem build",
-    "clean": "zem clean",
-    "exec": "zem exec",
-    "publish": "zem publish"
-  },
-  "zeplin": {
-    "displayName": "SwiftForAll",
-    "projectTypes": [
-      "android",
-      "ios",
-      "osx",
-      "web"
-    ],
-    "options": [
-      {
-        "name": "Override color structure name",
-        "type": "text",
-        "id": "colorStructName",
-        "default": ""
-      },
-      {
-        "name": "Color format declaration",
-        "type": "picker",
-        "id": "colorFormat",
-        "options": [
-          {
-            "name": "RGB (iOS & macOS default)",
-            "value": "rgb"
-          },
-          {
-            "name": "Hex RGBA (like web)",
-            "value": "hex_rgba"
-          },
-          {
-            "name": "Hex ARGB (like Android)",
-            "value": "hex_argb"
-          }
-        ],
-        "default": "rgb"
-      },
-      {
-        "name": "Font format in text styles",
-        "type": "picker",
-        "id": "fontFormat",
-        "options": [
-          {
-            "name": "System",
-            "value": "system"
-          },
-          {
-            "name": "SwiftGen",
-            "value": "swiftgen"
-          }
-        ],
-        "default": "system"
-      },
-      {
-        "name": "UI framework used in snippets",
-        "type": "picker",
-        "id": "snippetFramework",
-        "options": [
-          {
-            "name": "Default",
-            "value": "default"
-          },
-          {
-            "name": "UIKit",
-            "value": "forceUIKit"
-          },
-          {
-            "name": "AppKit",
-            "value": "forceAppKit"
-          }
-        ],
-        "default": "default"
-      }
-    ]
-  },
-  "dependencies": {
-    "camel-case": "^3.0.0",
-    "zem": "^0.4.4"
-  }
+   "name": "SwiftForAll",
+   "version": "0.3.1",
+   "description": "Generates Swift styleguide on all project types.",
+   "author": {
+      "name": "Amaury DAVID"
+   },
+   "repository": "https://github.com/amaurydavid/SwiftForAll",
+   "scripts": {
+      "start": "zem start",
+      "build": "zem build",
+      "clean": "zem clean",
+      "exec": "zem exec",
+      "publish": "zem publish"
+   },
+   "zeplin": {
+      "displayName": "SwiftForAll",
+      "projectTypes": [
+         "android",
+         "ios",
+         "osx",
+         "web"
+      ],
+      "options": [
+         {
+            "name": "Override color structure name",
+            "type": "text",
+            "id": "colorStructName",
+            "default": ""
+         },
+         {
+            "name": "Color format declaration",
+            "type": "picker",
+            "id": "colorFormat",
+            "options": [
+               {
+                  "name": "RGB (iOS & macOS default)",
+                  "value": "rgb"
+               },
+               {
+                  "name": "Hex RGBA (like web)",
+                  "value": "hex_rgba"
+               },
+               {
+                  "name": "Hex ARGB (like Android)",
+                  "value": "hex_argb"
+               }
+            ],
+            "default": "rgb"
+         },
+         {
+            "name": "Font format in text styles",
+            "type": "picker",
+            "id": "fontFormat",
+            "options": [
+               {
+                  "name": "System",
+                  "value": "system"
+               },
+               {
+                  "name": "SwiftGen",
+                  "value": "swiftgen"
+               }
+            ],
+            "default": "system"
+         },
+         {
+            "name": "UI framework used in snippets",
+            "type": "picker",
+            "id": "snippetFramework",
+            "options": [
+               {
+                  "name": "Default",
+                  "value": "default"
+               },
+               {
+                  "name": "SwiftUI",
+                  "value": "forceSwiftUI"
+               },
+               {
+                  "name": "UIKit",
+                  "value": "forceUIKit"
+               },
+               {
+                  "name": "AppKit",
+                  "value": "forceAppKit"
+               }
+            ],
+            "default": "default"
+         }
+      ]
+   },
+   "dependencies": {
+      "camel-case": "^3.0.0",
+      "zem": "^0.4.4"
+   }
 }
